--- a/formulario.html
+++ b/formulario.html
@@ -3,53 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Crear una cuenta</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="formulario.css">
 </head>
-<body class="container py-5">
+<body>
 
-  <h2 class="mb-4">Crear una cuenta es gratis para siempre</h2>
+  <div class="pantalla1">
+    <div class="columna"></div> 
+    
+    <div class="centro">
+      <div class="formulario-container">
+        <h2 class="mb-4">Crear una cuenta es gratis para siempre</h2>
 
-  <form>
-    <div class="mb-3">
-      <label for="nombre" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre del cliente">
+        <form id="formulario">
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control custom-input" id="nombre" name="nombre" placeholder="Nombre del cliente">
+          </div>
+
+          <div class="mb-3">
+            <label for="apellido" class="form-label">Apellido</label>
+            <input type="text" class="form-control custom-input" id="apellido" name="apellido" placeholder="Apellidos del cliente">
+          </div>
+
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control custom-input" id="password" name="password" placeholder="Crea una contraseña segura">
+          </div>
+
+          <div class="mb-3">
+            <label for="intereses" class="form-label">Selecciona tu área de interés</label>
+            <input list="lista-intereses" class="form-control custom-input" id="intereses" name="intereses" placeholder="Área de interés">
+            <datalist id="lista-intereses">
+              <option value="Programación">
+              <option value="Matemáticas">
+              <option value="Musicales">
+            </datalist>
+          </div>
+
+          <div class="mb-3">
+            <label for="fecha" class="form-label">Fecha de nacimiento</label>
+            <input type="date" class="form-control custom-input" id="fecha" name="fecha" placeholder="Selecciona tu fecha de nacimiento">
+          </div>
+
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <label class="form-check-label" for="politicas">
+              Acepto las políticas de protección de datos
+            </label>
+            <input class="form-check-input" type="checkbox" id="politicas" name="politicas">
+          </div>
+
+          <div class="mb-3">
+
+            <button type="button" id="enviar">Enviar</button>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <div class="mb-3">
-      <label for="apellido" class="form-label">Apellido</label>
-      <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Apellidos del cliente">
-    </div>
+    <div class="columna"></div> 
+  </div>
 
-    <div class="mb-3">
-      <label for="password" class="form-label">Contraseña</label>
-      <input type="password" class="form-control" id="password" name="password" placeholder="Crea una contraseña segura">
-    </div>
-
-    <div class="mb-3">
-      <label for="intereses" class="form-label">Selecciona tu área de interés</label>
-      <input list="lista-intereses" class="form-control" id="intereses" name="intereses" placeholder="Área de interés">
-      <datalist id="lista-intereses">
-        <option value="Programación">
-        <option value="Matemáticas">
-        <option value="Musicales">
-      </datalist>
-    </div>
-
-    <div class="mb-3">
-      <label for="fecha" class="form-label">Fecha de nacimiento</label>
-      <input type="date" class="form-control" id="fecha" name="fecha" placeholder="Selecciona tu fecha de nacimiento">
-    </div>
-
-    <div class="d-flex align-items-center gap-2">
-      <label class="form-check-label" for="politicas">
-        Acepto las políticas de protección de datos
-      </label>
-      <input class="form-check-input" type="checkbox" id="politicas" name="politicas">
-      <button type="submit" >Enviar</button>
-    </div>
-
-  </form>
-
+  <script src="formulario.js"></script>
 </body>
 </html>
